--- a/themes/standard/header.html
+++ b/themes/standard/header.html
@@ -18,7 +18,7 @@
 <div id="wrapper">
 
 <div id="header">
-   	<div id="date"> {$smarty.now|date_format:"%A, %e %B, %Y"} {$smarty.now|date_format:"%H:%M:%S"} | <a href="{$LITO_MODUL_PATH_URL}impressum/impressum.php">Impressum</a> | <a href="{$con[3]}"><img src="{$LITO_GLOBAL_IMAGE_URL}logout.png" alt="" border="0" /></a> <a href="{$LITO_MODUL_PATH_URL}login/logout.php">Logout</a> | <a href="#"> <img src="{$LITO_GLOBAL_IMAGE_URL}flag_en.png" width="25" height="14" border="0" /></a></div>
+   	<div id="date"> {$smarty.now|date_format:"%A, %e %B, %Y"} {$smarty.now|date_format:"%H:%M:%S"} | <a href="{$LITO_MODUL_PATH_URL}impressum/impressum.php">Impressum</a> | <a href="{$con[3]}"><img src="{$LITO_GLOBAL_IMAGE_URL}logout.png" alt="" border="0" /></a> <a href="{$LITO_MODUL_PATH_URL}login/logout.php">Logout</a> | <a href="{$LITO_MODUL_PATH_URL}login/logout.php$action=eng"> <img src="{$LITO_GLOBAL_IMAGE_URL}flag_en.png" width="25" height="14" border="0" /></a></div>
 <div id="logo">
 <table border="0">
   <tr>
