--- a/themes/standard/members/members_profile.html
+++ b/themes/standard/members/members_profile.html
@@ -15,7 +15,7 @@
               <th  colspan="3">&nbsp;</th>
             </tr>
             <tr bgcolor="{cycle values="#eeeeee,#dddddd"}"> 
-              <td  width="21%" rowspan="7" align="center"><img src="$upic" width="100" height="100"></td>
+              <td  width="21%" rowspan="7" align="center"><img src="{$upic}" width="100" height="100"></td>
               <td  width="37%"><span class="normalfont"><b>{#PROFILE_2#}</b></span></td>
               <td  width="42%"><span class="normalfont">{$username}</span></td>
             </tr>
